[gd_scene load_steps=9 format=3 uid="uid://d24yy8gmslqw7"]

[ext_resource type="Script" uid="uid://cmaw4308a3hnc" path="res://Scripts/pause_menu.gd" id="1_emv3i"]
[ext_resource type="Shader" uid="uid://b7re5tsrpmvsg" path="res://Scenes/pause_menu.gdshader" id="2_k0w1u"]
[ext_resource type="FontFile" uid="uid://dxvo5laf3e1vd" path="res://Assets/Maze_text.otf" id="3_1och7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_emv3i"]
shader = ExtResource("2_k0w1u")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1och7"]
bg_color = Color(0.664436, 0.536396, 0.786871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="Animation" id="Animation_1och7"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bpi0q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vmyb1"]
_data = {
&"RESET": SubResource("Animation_bpi0q"),
&"blur": SubResource("Animation_1och7")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emv3i")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_emv3i")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -194.0
offset_right = 228.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseButtons" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 45

[node name="ResumeButton" type="Button" parent="PanelContainer/PauseButtons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.984399, 0.991031, 0.986849, 1)
theme_override_fonts/font = ExtResource("3_1och7")
theme_override_styles/normal = SubResource("StyleBoxFlat_1och7")
text = "Resume"

[node name="ReturnButton" type="Button" parent="PanelContainer/PauseButtons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.984399, 0.991031, 0.986849, 1)
theme_override_fonts/font = ExtResource("3_1och7")
theme_override_styles/normal = SubResource("StyleBoxFlat_1och7")
text = "Return to Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vmyb1")
}

[connection signal="pressed" from="PanelContainer/PauseButtons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/PauseButtons/ReturnButton" to="." method="_on_return_button_pressed"]
